# gazm

./: .gitignore  .gitmodules  Cargo.toml  build.rs  db  gazmold.lua  m  mmap.md  notes.md  simple.yaml  todo.md
asm/: all.68  all.s  (+4 more)
debug/: Cargo.toml
debug/src/: dbgwin.rs  main.rs  mesh.rs  scrbox.rs  sourcewin.rs  tests.rs  textscreen.rs  v2.rs
debug/src/app/: mod.rs  sampler.rs  system.rs
debug/src/simple/: io.rs  mem.rs  mod.rs  region.rs  simplecore.rs
debug/src/text/: mod.rs
diss/: Cargo.toml  commands.json  history.txt
diss/src/: commands.rs  diss.rs  lib.rs  main.rs  memreader.rs  term.rs
emu/: Cargo.toml  build.rs
emu/src/: breakpoints.rs  diss.rs  lib.rs  proclog.rs  symtab.rs
emu/src/cpu/: addrmodes.rs  alu.rs  cpucore.rs  decoder.rs  flags.rs  formatters.rs  indexed.rs  isa.rs  isa_dbase.rs  mod.rs  registers.rs
emu/src/cpu/resources/: opcodes.json
emu/src/isa/: isa_reader.rs  mod.rs
emu/src/mem/: lmemmap.rs  maker.rs  memblock.rs  memcore.rs  memmap.rs  mod.rs  region.rs
emu/src/tests/: gregtest.rs  jsontest.rs
emu/src/vectrex/: veccore.rs
emu6809/: Cargo.toml  README.md
emu6809/src/: lib.rs
emu6809/src/cpu/: alu.rs  clock.rs  cpucore.rs  flags.rs  indexed.rs  registers.rs
emu6809/src/cpu/resources/: opcodes.json
emu6809/src/m6522/: mod.rs
emu6809/src/mem/: lmemmap.rs  memblock.rs  memmap.rs  memreader.rs  mod.rs  region.rs
gasm/: Cargo.toml  Makefile  README.md  all.68  t  t.txt  test.68
gasm/assets/: all.68
gasm/src/: as6809.rs  assemble.rs  ast.rs  astformat.rs  binary.rs  cli.rs  commands.rs  comments.rs  ctx.rs  error.rs  eval.rs  expr.rs  fileloader.rs  indexed.rs  infix.rs  item.rs  labels.rs  locate.rs  macros.rs  main.rs  messages.rs  node.rs  numbers.rs  opcodes.rs  position.rs  postfix.rs  register.rs  scopes.rs  sections.rs  sourcefile.rs  structs.rs  symbols.rs  tokenize.rs  util.rs
gazm/: Cargo.toml  README.md  build.rs  sections.yaml  tood.md
gazm/assets/: 6809all.gazm  gazm.toml
gazm/assets/help/: err_duplicate_registers.md  err_expected_index_register.md  err_expected_register.md  err_opcode_tfr.md  expected_abd_6809.md  expected_index_register_6809.md  expected_register_6809.md  index_mode_not_valid_indirect_6809.md  opcode_tfr_6809.md
gazm/assets/test_src/: circular_inc.gazm  error.toml  newfe.gazm  three_errors.gazm
gazm/assets/test_src/6800/: gazm.toml  main.src  vsndrm2.map  vsndrm2.src  vsndrm2.sym
gazm/src/: as6809.rs  asmctx.rs  assemble.rs  ast.rs  astformat.rs  async_tokenize.rs  binary.rs  cli.rs  commands.rs  comments.rs  compile.rs  config.rs  cpukind.rs  ctx.rs  doc.rs  error.rs  eval.rs  evaluator.rs  expr.rs  fixerupper.rs  gasm.rs  gazm.rs  gazmeval.rs  gazmsymbols.rs  indexed.rs  item.rs  item6809.rs  labels.rs  lib.rs  locate.rs  lookup.rs  lsp.rs  macros.rs  main.rs  messages.rs  node.rs  nodeiter.rs  numbers.rs  opcodes.rs  opts.rs  (+14 more)
gazm/src/assembler/: asm.rs  binary.rs  bytesizes.rs  compile.rs  edit.rs  evaluator.rs  fixerupper.rs  mod.rs  regutils.rs  scopes.rs  scopetracker.rs  sizer.rs  traits.rs  writers.rs
gazm/src/cli/: config.rs  cpukind.rs  mod.rs  opts.rs  parse.rs  styling.rs
gazm/src/cpu6800/: assembler6800.rs  mod.rs
gazm/src/cpu6800/assembler/: compiler.rs  mod.rs  sizer.rs
gazm/src/cpu6809/: assembler6809.rs  compile.rs  mod.rs  regutils.rs
gazm/src/docs/: mod.rs
gazm/src/fmt/: mod.rs
gazm/src/frontend/: ast.rs  basetoken.rs  commands.rs  cpukind.rs  cpuparser.rs  error.rs  expr.rs  gazmunraveller.rs  identifier.rs  indexed.rs  item.rs  item6809.rs  labeldefinition.rs  lexer.rs  macros.rs  misc.rs  mod.rs  new_indexed.rs  newparse.rs  node.rs  nodeiter.rs  nodekind.rs  opcodes.rs  parse.rs  parseindexed.rs  parsetask.rs  parsetext.rs  register.rs  struct_def.rs  structs.rs  testit.rs  token_store.rs  tokenize.rs  tokens.rs  traits.rs  utils.rs
gazm/src/help/: mod.rs
gazm/src/lsp/: backend.rs  mod.rs  server.rs
gazm/src/newsyms/: eval.rs  mod.rs  symvalue.rs  value.rs
gazm/src/parse/: commands.rs  comments.rs  error.rs  expr.rs  import.rs  labels.rs  locate.rs  macros.rs  mod.rs  numbers.rs  structs.rs  util.rs
gazm/src/parse6809/: indexed.rs  mod.rs  opcodes.rs  register.rs
gazm/src/semantic/: ast.rs  gazmeval.rs  mod.rs
gazm/src/unused/: as6809.rs  util.rs
glht/: Cargo.toml  cols.js  keys.js  styles.rs
glht/src/: colour.rs  colourcell.rs  cycler.rs  dap.rs  dbgwin.rs  docwin.rs  events.rs  imguitext.rs  lib.rs  main.rs  mesh.rs  scrbox.rs  sourcewin.rs  styles.rs  tests.rs  textcontext.rs  textscreen.rs  v2.rs  window.rs
glht/src/app/: frametime.rs  mod.rs  sampler.rs  system.rs
glht/src/simple/: breakpoints.rs  filewatcher.rs  io.rs  mem.rs  mod.rs  simplecore.rs  state.rs  utils.rs
glht/src/text/: imguitext.rs  mod.rs  textcontext.rs  traits.rs  window.rs
glsp/: .gitignore  Cargo.toml
glsp/src/: main.rs
makehelp/: Cargo.toml
makehelp/src/: gencode.rs  helpentry.rs  lib.rs  main.rs  template.rs
sources/: Cargo.toml
sources/assets/: test.txt
sources/src/: error.rs  fileloader.rs  fileutils.rs  lib.rs  pathsearcher.rs  rle.rs  sourcefiles.rs  sourcestore.rs  textedit.rs
sources/src/sources/: mod.rs  position.rs
utils/: Cargo.toml  pathsearcher.rs
utils/src/: chunk.rs  error.rs  fileutils.rs  hash.rs  isa_reader.rs  lib.rs  location.rs  main.rs  pathsearcher.rs  rle.rs  rom.rs  romloader.rs  sourcestore.rs  stack.rs
utils/src/eval/: error.rs  eval.rs  eval_postfix.rs  mod.rs  postfix.rs
utils/src/expsymbols/: cursor.rs  mod.rs  paths.rs  table.rs  tree.rs
utils/src/sources/: error.rs  fileloader.rs  mod.rs  nsym.rs  position.rs  scopedname.rs  sourcefile.rs  sourcefiles.rs  sourceinfo.rs  sourcestore.rs  symbolnav.rs  symbols.rs  symboltable.rs  symboltree.rs  symboltree_serde.rs  symboltreereader.rs  symboltreewriter.rs  textedit.rs  value.rs
utils/src/symbols/: cursor.rs  mod.rs  paths.rs  symbolnav.rs  symbols.rs  symboltable.rs  symboltree.rs  symboltree_serde.rs  symboltreereader.rs  symboltreewriter.rs  table.rs  tree.rs
utils/src/value/: mod.rs  symvalue.rs  value.rs  value_ops.rs
(+137 files in other folders)
