[package]
name = "debugger"
version = "0.1.0"
authors = ["Gaz Liddon MBP19 <gaz@gazaxian.com>"]
edition = "2021"

[dependencies]
emu = { path = "../emu" }
utils = { path = "../utils" }
vector2d="*"

glium = { version = "0.29.1", default-features = true }
winit="0.25"
cgmath="*"
num="*"
lazy_static = "*"
byteorder="*"
imgui-glium-renderer="0.8.2"
imgui-winit-support="0.8.2"

serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
serde_json = "*"
serde_derive = "*"
log="*"
env_logger="*"
notify = "*"
itertools = "*"
clap = "*"
