[package]
name = "diss"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pretty_assertions="*"
emu = {path = "../emu"}
clap = { version = "3.1.5", features = ["derive", "color"] }
gazm = {path = "../gazm"}
utils = {path="../utils"}
colored = "2"
ego-tree="*"
anyhow="*"
thiserror="*"
regex="*"
byteorder="*"
shellexpand = "2.1"

# serde = { version = "*", features = ["derive"] }
# serde_yaml = "*"
# serde_json = "*"

rustyline = "9.1.2"
nom="*"
nom_locate="*"

[lib]
name= "disslib"
path= "src/lib.rs"

[[bin]]
name = "diss"
path = "src/main.rs"
