[package]
name = "emu"
version = "0.1.0"
authors = ["Gaz Liddon MBP19 <gaz@gazaxian.com>"]
edition = "2018"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
sha1 = "0.5.0"
serde = "*"
serde_yaml = "*"
serde_json = "*"
serde_derive = "*"
romloader = {path = "../utils"}

[dependencies]
num="*"
lazy_static = "1.0"
sha1 = "0.5.0"
bitflags="*"
romloader = {path = "../utils"}

serde = "*"
serde_yaml = "*"
serde_json = "*"
serde_derive = "*"

log="*"

notify = "*"

itertools = "*"
