[package]
name = "emu"
version = "0.1.0"
authors = ["Gaz Liddon MBP19 <gaz@gazaxian.com>"]
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
sha1 = "0.10.1"
bitflags="1.3.2"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
serde_json = "*"

[dependencies]
num="*"
byteorder="*"
lazy_static = "1.0"
sha1 = "0.5.0"
bitflags="1.3.2"
lru-cache = "*"
thiserror="*"

serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
serde_json = "*"

log="*"
notify = "*"
itertools = "*"
