[package]
name = "gasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "*"
nom_locate = "*"
lazy_static = "1.4.0"
pretty_assertions="*"
romloader = { path = "../utils" }
emu = {path = "../emu"}
clap = { version = "3.0.0-rc.7", features = ["derive", "color"] }
colored = "2"
ego-tree="*"
petgraph="*"


