[package]
name = "gazm"
version = "0.9.9"
edition = "2021"
authors= ["gazaxian"]

[dependencies]
anyhow="*"
clap = { version = "3.1.5", features = ["derive", "color"] }
colored = "*"
ego-tree="*"
env_logger="*"
itertools="*"
lazy_static = "*"
log="*"
nom = "*"
nom_locate = "*"
pretty_assertions="*"
rayon = "*"
regex="*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
simple-logging="*"
thin-vec="*"
thiserror="*"
tokio = { version = "1.24.2", features = ["full"] }
tokio-util = { version = "*", optional = true, features = ["codec"] }
toml="*"
tower-lsp = { git = "https://github.com/gazliddon/tower-lsp", version = "*" }
tryvial="*"

eval = {path = "../../crates/eval"}
emu = {path = "../../crates/emu6809"}
symbols = {path = "../../crates/symbols"}

utils = {path = "../utils"}


[dev-dependencies]
criterion = "0.3"

[[bench]]
name="tokenize"
harness = false

