[package]
name = "gazm"
version = "0.9.10"
edition = "2021"
authors= ["gazaxian"]

[dependencies]
anyhow="1.0.75"
clap = { version = "3.1.5", features = ["derive", "color"] }
colored = "2.0.4"
ego-tree="0.6.2"
env_logger="0.10.0"
itertools="0.11.0"
lazy_static="1.4.0"
log="0.4.20"
nom = "7.1.3"
nom_locate = "4.2.0"
rayon = "1.8.0"
regex = "1.9.5"
serde = { version="1.0.188", features=[ "derive" ]}
serde_json = "1.0.107"
serde_yaml = "0.9.25"
simple-logging="2.0.2"
thin-vec="0.2.12"
thiserror="1.0.48"
tokio = { version = "1.24.2", features = ["full"] }
tokio-util = { version = "0.7.9", optional = true, features = ["codec"] }
toml="0.8.0"
tower-lsp = { git = "https://github.com/gazliddon/tower-lsp", version = "*" }
tryvial="0.2.0"

emu6809 = {path="../../crates/emu6809"}
grl-sources = {path = "../../crates/grl-sources"}
grl-symbols = {path = "../../crates/grl-symbols"}
grl-utils = {path = "../../crates/grl-utils"}
grl-eval = {path="../../crates/grl-eval"}

[dev-dependencies]
pretty_assertions="1.4.0"

[[bench]]
name="tokenize"
harness = false

