[package]
name = "gazm"
version = "0.9.16"
edition = "2021"
authors= ["Gaz Liddon"]

[dependencies]
anyhow="1.0.75"
clap = { version = "4.4.4", features = ["derive", "color", "cargo"] }
colored = "2.0.4"
ego-tree="0.6.2"
itertools="0.11.0"
lazy_static="1.4.0"
log="0.4.20"
rayon = "1.8.0"

serde = { version="1.0.188", features=[ "derive" ]}
serde_json = "1.0.107"
serde_yaml = "0.9.25"

simple-logging="2.0.2"
thin-vec="0.2.12"
thiserror="1.0.48"
tokio = { version = "1.24.2", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
toml="0.8.0"
tower-lsp = { git = "https://github.com/gazliddon/tower-lsp", version = "*" }
tryvial="0.2.0"
logos="0.13.0"

emu6809 = {path="../../crates/emu6809"}
emu6800 = {path="../../crates/emu6800"}
grl-sources = {path = "../../crates/grl-sources"}
grl-eval = {path="../../crates/grl-eval"}
unraveler = {path="../../crates/unraveler"}

num-traits = "0.2.17"
strum = { version = "0.25", features = ["derive"] }
regex = "1.10.0"
termimad = "0.25.5"
glob = "0.3.1"
convert_case = "0.6.0"

[dev-dependencies]
pretty_assertions="1.4.0"

[build-dependencies]
glob = "0.3.1"
makehelp ={path="../makehelp"} 
anyhow="1.0.75"

