[package]
name = "glht"
version = "0.1.0"
authors = ["Gaz Liddon MBP19 <gaz@gazaxian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

emu = { path = "../emu" }
romloader = {path = "../utils"}
vector2d="*"
glium="*"
imgui="*"
imgui-glium-renderer="*"
imgui-winit-support="*"
cgmath="*"
num="*"
lazy_static = "1.0"
# sha1 = "0.5.0"
# bitflags="*"

serde = "*"
serde_yaml = "*"
serde_json = "*"
serde_derive = "*"

log="*"
env_logger="*"
notify = "*"

itertools = "*"

clap = "*"
