[package]
name = "glsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7", optional = true, features = ["codec"] }
tokio = { version = "1.21.0", features = ["full"] }
tower-lsp = "*"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
log="*"
env_logger="*"
simple-logging="*"

