[package]
name = "makehelp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
regex=  "1.10.2"
shellexpand = "3.0"
anyhow="*"
convert_case = "0.6.0"
handlebars = "4.5"
serde_json = "*"
