[package]
name = "sources"
version = "0.2.0"
authors = ["Gaz Liddon"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow="*"
base16ct="*"
base64ct="*"
ego-tree="*"
env_logger="*"
lazy_static = "1.4.0"
log="*"
path-clean="*"
pathdiff="*"
pretty_assertions="*"
quick-error="*"
regex = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
sha1="*"
thin-vec="*"
thiserror="*"
symbols = {path = "../../crates/symbols", features=["serde_support"]}
utils = {path = "../../crates/utils"}

