[package]
name = "romloader"
version = "0.1.0"
authors = ["Gaz Liddon MBP19 <gaz@gazaxian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1"
itertools = "*"
quick-error="*"
anyhow="*"
serde = "*"
serde_yaml = "*"
serde_json = "*"
serde_derive = "*"


log="*"
env_logger="*"
