[package]
name = "utils"
version = "0.1.0"
authors = ["Gaz Liddon MBP19 <gaz@gazaxian.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1"
quick-error="*"
anyhow="*"
log="*"
env_logger="*"
ego-tree="*"
pathdiff="*"
path-clean="*"

serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
serde_json = "*"
